# Sarah-CPA

./: .gitignore  PROGRESS.md  README.md  agent_archi.md  demo-day-deck.html  due-datehq-ten-minute-story-compact.html  due-datehq-ten-minute-story.html  duedatehq-interaction-architecture.md  duedatehq-interaction-dev-guide-v5.md  duedatehq-mock.html  duedatehq-product-design.md  duedatehq-redesign-v2.html  duedatehq-tech-arch.md  pyproject.toml
db/: postgres_schema.sql
docs/: cli-reference.md  demo-day-script-zh.md  demo-operator-guide.md  due-datehq-design-spec.html  due-datehq-prd.md  frontend-ui-guidelines.md  interaction-design-assessment.md  interactive-rendering-vnext.md  on-demand-rendering-technical-plan.md  product-track-assessment.md
duedatehq/: __init__.py
duedatehq-frontend-skill/: SKILL.md  components-reference.html  tokens.css
frontend/: README.md  index.html  onboarding.html  package-lock.json  package.json  tsconfig.json
handoff/: DueDateHQ — 商业计划书.html  DueDateHQ — 用户故事与价值主张画布.html  due-datehq-demo-import.csv  duedatehq-mock.html  redesign-v2-handoff.md
scripts/: build_all.sh  deploy_backend_ec2.sh  deploy_frontend_ec2.sh  run_flywheel_convergence.py  run_flywheel_runtime_simulation.py  run_llm_flywheel_simulation.py  run_nlu_eval.py  run_template_agent_edge_cases.py  seed_small_demo.py
tests/: conftest.py  test_agent_kernel.py  test_agent_policy.py  test_executor.py  test_flywheel.py  test_flywheel_full_loop.py  test_flywheel_router.py  test_followup_feedback.py  test_http_api.py  test_intent_cache.py  test_intent_planner.py  test_smoke.py  (+11 more)
(+72 files in other folders)
