[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duedatehq"
version = "0.1.0"
description = "DueDateHQ infrastructure scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
postgres = ["psycopg[binary]>=3.2"]
workers = ["celery>=5.4", "redis>=5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
